2003-04-04  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03837] Re: gif animation with no delay_time
	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): add delay
				check delay_time
		(get_image_size): no need delay time
		(fb_image_load): check delay 
		(draw): no bg
	* w3mimg/fb/fb_w3mimg.c (w3mfb_show_image): delete delay skip loop
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): add delay
				check delay_time
		(x11_load_image): check delay
		(x11_get_image_size): no need delay time

2003-03-28  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* doc(-jp)/keymap.default: ';' is quoted

2003-03-28  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* Makefile.in: distclean removes core

2003-03-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03836] CFLAGS for SSL in configure
	* acinclude.m4 (AC_W3M_SSL): add -I$dir/include to CFLAGS

2003-03-28  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03834] Re: gif animation with no delay_time
	* w3mimg/x11/x11_w3mimg.c (x11_load_image): fix delay check

2003-03-27  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03833] gif animation with no delay_time
	* w3mimg/fb/fb_w3mimg.c (w3mfb_show_image): skip delay<=0
	* w3mimg/x11/x11_w3mimg.c (x11_image): add delay
		(x11_img_new): initialize delay
		(x11_load_image): initialize delay
		(x11_show_image): jump to last image if delay<=0

2003-03-27  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03831] fix typo
	* acinclude.m4 (AC_W3M_LANG): SYSTEM_CODE
	* configure.in: fix typo CYGIN

2003-03-27  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03830] Image size of gif animation
	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): added
		(get_image_size): use get_animation_size()
		(fb_image_load): ditto
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): added
		(x11_load_image): use get_animation_size()
		(x11_get_image_size): ditto

2003-03-25  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03829] w3mimgdisplay -anim
	* w3mimgdisplay.c (maxAnim): added, default 100